<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:stackFromBottom="true"
        android:transcriptMode="alwaysScroll" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollHorizontally="false"
            android:scrollbarAlwaysDrawVerticalTrack="false"
            android:singleLine="false"
            android:text="@string/prompt_text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </ScrollView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin_text"
        android:gravity="center_horizontal"
        android:text="@string/explain_led_tglbtn"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ToggleButton
            android:id="@+id/toggleButton1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/led_text1"
            android:textOff="@string/capital_led1_off"
            android:textOn="@string/capital_led1_on" />

        <ToggleButton
            android:id="@+id/toggleButton2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/led_text1"
            android:textOff="@string/capital_led2_off"
            android:textOn="@string/capital_led2_on" />

        <ToggleButton
            android:id="@+id/toggleButton3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/led_text1"
            android:textOff="@string/capital_led3_off"
            android:textOn="@string/capital_led3_on" />

        <ToggleButton
            android:id="@+id/toggleButton4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/led_text1"
            android:textOff="@string/capital_led3_off"
            android:textOn="@string/capital_led3_on" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin_text"
        android:gravity="center_horizontal"
        android:text="@string/explain_speed_btn"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/linearLayoutSpeedBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:showDividers="beginning" >

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_up" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_down" />

    </LinearLayout>

</LinearLayout>